<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button5"
        android:layout_width="105dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:background="#FCF8F8"
        android:text="precedent"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout1"
        android:layout_width="470dp"
        android:layout_height="110dp"
        android:layout_marginTop="-10dp"
        android:background="@drawable/borderplats"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/nomValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/profile" />


        <TextView
            android:id="@+id/nomValue"
            android:layout_width="129dp"
            android:layout_height="37dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="137dp"
            android:contentDescription="@string/nom"
            android:paddingTop="10dp"
            android:text="@string/nom"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toTopOf="@+id/poidsValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/nom" />


        <TextView
            android:id="@+id/poidsValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/poidsValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/nomValue"
            tools:text="@string/poidsValue" />


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="419dp"
        android:layout_height="100dp"
        android:background="@drawable/borderplats"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1">


        <TextView
            android:id="@+id/nomObjectif"
            android:layout_width="226dp"
            android:layout_height="42dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="276dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/nomObjectif"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toTopOf="@+id/objectifValue"
            app:layout_constraintEnd_toStartOf="@+id/progressBar3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/objectifValue"
            tools:text="@string/nomObjectif" />

        <TextView
            android:id="@+id/objectifValue"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="35dp"
            android:paddingLeft="5dp"
            android:text="@string/objectifValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toStartOf="@+id/progressBar3"
            app:layout_constraintHorizontal_bias="0.58"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nomObjectif"
            tools:text="@string/objectifValue" />


        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="228dp"
            android:layout_height="36dp"
            android:layout_marginEnd="7dp"
            android:max="75"
            android:paddingTop="10dp"
            android:progress="50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/objectifValue"
            app:layout_constraintTop_toTopOf="@+id/nomObjectif" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="47dp"
            android:layout_marginTop="1dp"
            android:text="85kg"
            app:layout_constraintStart_toEndOf="@+id/objectifValue"
            app:layout_constraintTop_toBottomOf="@+id/nomObjectif" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="34dp"
            android:layout_height="24dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="20dp"
            android:text="75kg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar3" />


    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="110dp"
        android:layout_height="32dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="40dp"
        android:text="@string/platdujour"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:background="#FFFCFC"
        android:text="suivant"
        android:textSize="8sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <fragment
        android:id="@+id/fragment"
        android:name="com.example.regime_app.platsrecycleviewfragment"
        android:layout_width="359dp"
        android:layout_height="413dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/borderplats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />


</android.support.constraint.ConstraintLayout>

